--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/app.component.html
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/app.component.html
@@ -1,7 +1,25 @@
-<header>
-  <app-menu></app-menu>
-</header>
-<main>
-  <router-outlet>
-  </router-outlet>
-</main>
+<mat-toolbar>
+  <mat-toolbar-row>
+    <button mat-stroked-button (click)="opened=!opened">Menu</button>
+    <h1>{{title2}}</h1>
+  </mat-toolbar-row>
+</mat-toolbar>
+<mat-sidenav-container>
+  <mat-sidenav [(opened)]="opened" mode="side">
+    <p>TERC</p>
+    <mat-nav-list>
+      <a mat-list-item [routerLink]="['/DajWojewodztwa']">Województwa</a>
+      <a mat-list-item [routerLink]="['/DajPowiaty']">Powiaty</a>
+      <a mat-list-item [routerLink]="['/DajMiastaWojewodztwo']">Miasta</a>
+    </mat-nav-list>
+    <p>SIMC</p>
+    <mat-nav-list>
+    </mat-nav-list>
+    <p>ULIC</p>
+    <mat-nav-list>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
