--- a/Teryt/TerytGUI/TerytFrontEnd/src/styles.scss
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/styles.scss
@@ -6,5 +6,6 @@ body {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  background-color: whitesmoke;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
