Ukończenie 3 komponentów TERC

--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/app.component.html
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/app.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <button mat-stroked-button (click)="opened=!opened">Menu</button>
+    <button mat-icon-button (click)="opened=!opened">
+      <mat-icon>menu</mat-icon>
+    </button>
     <h1>{{title2}}</h1>
   </mat-toolbar-row>
 </mat-toolbar>
