--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/cities-voivodeship-list/cities-voivodeship-list.component.html
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/cities-voivodeship-list/cities-voivodeship-list.component.html
@@ -1,8 +1,8 @@
 <div class="cities-voivodeship-container">
-  <form class="form-container" (ngSubmit)="getCitiesInVoivodeship()">
-    <h3>W którym województwie chcesz szukać miast?</h3>
+  <form class="form-container" [formGroup]="selectedVoivodeship" (ngSubmit)="getCitiesInVoivodeship()">
+    <strong>W którym województwie chcesz szukać miast?</strong>
     <mat-form-field appearance="fill">
-      <select matNativeControl required (change)="onSelected($event)">
+      <select matNativeControl required formControlName="wojewodztwoId">
         <option *ngFor="let voivo of voivodeships" [value]="voivo.value">
           {{voivo.viewValue}}
         </option>
