--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/cities-voivodeship-list/cities-voivodeship-list.component.scss
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/cities-voivodeship-list/cities-voivodeship-list.component.scss
@@ -7,14 +7,25 @@
   margin-bottom: 10px;
 }
 
-th {
+th.mat-header-cell {
   margin-right: 10px;
+  text-align: center;
+  background-color: black;
+  color: whitesmoke;
+  font-size: 1.1rem;
+  font-weight: 300;
+}
+
+td,
+th {
+  border: 1px solid rgb(99, 6, 99);
 }
 
 table {
   margin-top: 10px;
   width: 50%;
   border: 1px solid black;
+  text-align: center;
 }
 
 button {
