--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/counties-list/counties-list.component.scss
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/counties-list/counties-list.component.scss
@@ -41,3 +41,9 @@ button:hover {
   color: white;
   transition: 0.3s;
 }
+
+mat-form-field {
+  display: inline-block;
+  margin-left: 10px;
+  margin-right: 10px;
+}
