--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/app.component.html
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/app.component.html
@@ -9,11 +9,29 @@
 <mat-sidenav-container>
   <mat-sidenav [(opened)]="opened" mode="side">
     <p>TERC</p>
-    <mat-nav-list>
-      <a mat-list-item [routerLink]="['/DajWojewodztwa']">Województwa</a>
-      <a mat-list-item [routerLink]="['/DajPowiaty']">Powiaty</a>
-      <a mat-list-item [routerLink]="['/DajMiastaWojewodztwo']">Miasta</a>
-    </mat-nav-list>
+    <mat-list>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/DajWojewodztwa']">Województwa</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/DajPowiaty']">Powiaty</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/DajPowiat']">Powiat </a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/DajMiastaWojewodztwo']">Miasta</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/DajDelegaturyDzielnice']">Delegatury dzielnice</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/DajTerenyWiejskieWPowiecie']">Tereny wiejskie</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/DajGminy']">Gminy</a>
+      </mat-list-item>
+    </mat-list>
     <p>SIMC</p>
     <mat-nav-list>
     </mat-nav-list>
