--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/cities-voivodeship-list/cities-voivodeship-list.component.html
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/cities-voivodeship-list/cities-voivodeship-list.component.html
@@ -2,37 +2,31 @@
   <form class="form-container" [formGroup]="selectedVoivodeship" (ngSubmit)="getCitiesInVoivodeship()">
     <strong>W którym województwie chcesz szukać miast?</strong>
     <mat-form-field appearance="fill">
-      <select matNativeControl required formControlName="wojewodztwoId">
-        <option *ngFor="let voivo of voivodeships" [value]="voivo.value">
+      <mat-select matNativeControl required formControlName="wojewodztwoId">
+        <mat-option *ngFor="let voivo of voivodeships" [value]="voivo.value">
           {{voivo.viewValue}}
-        </option>
-      </select>
+        </mat-option>
+      </mat-select>
     </mat-form-field>
     <button mat-button type="submit">Szukaj</button>
   </form>
-
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="Nazwa">
       <th mat-header-cell *matHeaderCellDef> Nazwa </th>
       <td mat-cell *matCellDef="let element"> {{element.nazwa}} </td>
     </ng-container>
-
     <ng-container matColumnDef="Wojewodztwo ID">
       <th mat-header-cell *matHeaderCellDef>Wojewodztwo ID</th>
       <td mat-cell *matCellDef="let element"> {{element.wojewodztwoId}} </td>
     </ng-container>
-
     <ng-container matColumnDef="Stan na">
       <th mat-header-cell *matHeaderCellDef> Stan na </th>
       <td mat-cell *matCellDef="let element"> {{element.stanNa | date:'yyyy-MM-dd'}} </td>
     </ng-container>
-
     <ng-container matColumnDef="Nazwa Terytorialna">
       <th mat-header-cell *matHeaderCellDef> Nazwa Terytorialna </th>
       <td mat-cell *matCellDef="let element"> {{element.nazwaTerytorialna}} </td>
     </ng-container>
-
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
