--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/cities-voivodeship-list/cities-voivodeship-list.component.scss
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/cities-voivodeship-list/cities-voivodeship-list.component.scss
@@ -7,6 +7,23 @@
   margin-bottom: 10px;
 }
 
+
+.mat-form-field-flex {
+  border-radius: 4px 4px 0 0;
+  padding: 0em 0em 0em 0em;
+}
+
+form {
+  margin-top: 10px;
+}
+
+
+
+.mat-form-field-wrapper {
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
 th.mat-header-cell {
   margin-right: 10px;
   text-align: center;
@@ -33,6 +50,7 @@ button {
   font-size: 1.1rem;
   border: 1px solid purple;
   background-color: whitesmoke;
+  margin-left: 10px;
 }
 
 button:hover {
@@ -44,8 +62,13 @@ button:hover {
 
 mat-form-field {
   display: inline-block;
+  padding: 0px 0px 0px 0px;
 }
 
 input {
   border: 1px solid black;
+}
+
+strong {
+  margin-right: 10px;
 }
