--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/voivodeships-list/voivodeships-list.component.html
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/voivodeships-list/voivodeships-list.component.html
@@ -1,6 +1,6 @@
 <div class="voivodeships-container">
   <mat-toolbar-row>
-    <strong>Wyszukaj wszystkie województwa</strong>
+    <strong>Wyszukaj wszystkie zarejestrowane województwa</strong>
     <button mat-button (click)="getAllVoivodeships()">Wyszukaj</button>
   </mat-toolbar-row>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
