Ukończenie komponentów SIMC

--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/app.component.html
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/app.component.html
@@ -16,26 +16,50 @@
     <p>TERC</p>
     <mat-list>
       <mat-list-item role="listitem">
-        <a mat-list-item [routerLink]="['/DajWojewodztwa']">Województwa</a>
+        <a mat-list-item [routerLink]="['/TERC/DajWojewodztwa']">Województwa</a>
       </mat-list-item>
       <mat-list-item role="listitem">
-        <a mat-list-item [routerLink]="['/DajPowiaty']">Powiaty</a>
+        <a mat-list-item [routerLink]="['/TERC/DajPowiaty']">Powiaty</a>
       </mat-list-item>
       <mat-list-item role="listitem">
-        <a mat-list-item [routerLink]="['/DajMiastaWojewodztwo']">Miasta</a>
+        <a mat-list-item [routerLink]="['/TERC/DajMiastaWojewodztwo']">Miasta</a>
       </mat-list-item>
       <mat-list-item role="listitem">
-        <a mat-list-item [routerLink]="['/DajDelegaturyDzielnice']">Delegatury dzielnice</a>
+        <a mat-list-item [routerLink]="['/TERC/DajDelegaturyDzielnice']">Delegatury dzielnice</a>
       </mat-list-item>
       <mat-list-item role="listitem">
-        <a mat-list-item [routerLink]="['/DajTerenyWiejskieWPowiecie']">Tereny wiejskie</a>
+        <a mat-list-item [routerLink]="['/TERC/DajTerenyWiejskieWPowiecie']">Tereny wiejskie</a>
       </mat-list-item>
       <mat-list-item role="listitem">
-        <a mat-list-item [routerLink]="['/DajGminy']">Gminy</a>
+        <a mat-list-item [routerLink]="['/TERC/DajGminy']">Gminy</a>
       </mat-list-item>
     </mat-list>
     <p>SIMC</p>
     <mat-nav-list>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/SIMC/DajMiastaWojewodztwo']">Miasta</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/SIMC/DajDelegaturyMiast']">Delegatury</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/SIMC/DajSchroniskaTurstyczne']">Schroniska turystyczne</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/SIMC/DajCzesciMiejscowosci']">Części miejscowości</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/SIMC/DajOsadyWPowiecie']">Osady</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/SIMC/DajWsieWPowiecie']">Wsie w powiecie</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/SIMC/DajCzesciMiasta']">Części miasta</a>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <a mat-list-item [routerLink]="['/SIMC/DajCaleWsie']">Całe wsie</a>
+      </mat-list-item>
     </mat-nav-list>
     <p>ULIC</p>
     <mat-nav-list>
