--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/simc/components/touristic-shelters-list/touristic-shelters-list.component.html
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/simc/components/touristic-shelters-list/touristic-shelters-list.component.html
@@ -2,7 +2,7 @@
   <strong>W którym województwie chcesz szukać schronisk turystycznych?</strong>
   <form class="form-container" [formGroup]="selected" (ngSubmit)="getDeleganciesInVoivodeship()">
     <mat-form-field appearance="fill">
-      <mat-select matNativeControl required formControlName="wojewodztwoId">
+      <mat-select matNativeControl required formControlName="wojewodztwoId" placeholder="Województwo">
         <mat-option *ngFor="let voivo of voivodeships" [value]="voivo.value">
           {{voivo.viewValue}}
         </mat-option>
