--- a/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/counties-list/counties-list.component.html
+++ b/Teryt/TerytGUI/TerytFrontEnd/src/app/terc/components/counties-list/counties-list.component.html
@@ -2,7 +2,7 @@
   <form class="form-container" [formGroup]="selectedVoivodeship" (ngSubmit)="getCounties()">
     <strong>W którym województwie chcesz szukać powiatów?</strong>
     <mat-form-field appearance="fill">
-      <mat-select matNativeControl required formControlName="wojewodztwoId">
+      <mat-select matNativeControl required formControlName="wojewodztwoId" placeholder="Województwo">
         <mat-option *ngFor="let voivo of voivodeships" [value]="voivo.value">
           {{voivo.viewValue}}
         </mat-option>
