--- a/Teryt/TerytFrontend/src/app/app.component.scss
+++ b/Teryt/TerytFrontend/src/app/app.component.scss
@@ -12,6 +12,8 @@ mat-toolbar-row {
   background-color: black;
   color: whitesmoke;
   border-bottom: 1px solid purple;
+  display: flex;
+  justify-content: space-between;
 }
 
 mat-side-content {
