--- a/Teryt/TerytFrontend/src/app/app.component.scss
+++ b/Teryt/TerytFrontend/src/app/app.component.scss
@@ -126,3 +126,15 @@ mat-nav-list {
   transition: 0.3s;
   background-color: transparent;
 }
+
+.user-panel {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
+.user-panel p {
+  margin-right: 5px;
+  padding-bottom: 10px;
+}
